# nebulous

./: .env_  .gitignore  Cargo.toml  Dockerfile  Dockerfile.bug  Dockerfile.dev  Dockerfile.old  Makefile  README.md  build.sh  cloudbuild.yaml  docker-compose.yml  install.sh  remote_install.sh  test.json
.github/workflows/: chart_release.yml  release.yml
clusters/: ingress.yaml  ingress_dev.yaml  ingress_redis.yaml  ingress_redis_dev.yaml  nebu.yaml  nebu_dev.yaml  orign.yaml  orign_dev.yaml
deploy/charts/nebulous/: Chart.yaml  README.md  README.md.gotmpl  values.yaml
deploy/charts/nebulous/templates/: NOTES.txt  _helpers.tpl  bucket.yaml  deployment.yaml  encryption.yaml  headscale.yaml  ingress.yaml  openmeter.yaml  postgres.yaml  provider_aws.yaml  provider_runpod.yaml  pvc.yaml  rbac.yaml  redis.yaml  service.yaml  serviceaccount.yaml  tailscale.yaml
docs/: why_not_kube.md
examples/: basic.yaml  swift.yaml
examples/containers/: README.md  basic.yaml  swift.yaml  trl.yaml  trl_adapter_small.yaml  trl_small.yaml  vllm.yaml  vllm_adapter.yaml  vllm_authz.yaml
examples/processors/: basic.yaml  vllm_bash.yaml
examples/processors/vllm_aio/: Dockerfile  __main__.py
examples/processors/vllm_py/: __main__.py  vllm.yaml
examples/sync/: basic.yaml
scripts/: gen_test_ds.py
src/: cli.rs  config.rs  db.rs  errors.rs  lib.rs  main.rs  middleware.rs  models.rs  mutation.rs  org.rs  orign.rs  query.rs  state.rs  validate.rs
src/accelerator/: aws.rs  base.rs  mod.rs  runpod.rs
src/agent/: agent.rs  aws.rs  mod.rs  ns.rs
src/auth/: agent.rs  api.rs  aws.rs  db.rs  mod.rs  models.rs  ns.rs
src/auth/server/: handlers.rs  main.rs  mod.rs
src/client/: client.rs
src/clusters/: mod.rs
src/commands/: auth_cmd.rs  configure_cmd.rs  create_cmd.rs  daemon_cmd.rs  delete_cmd.rs  exec_cmd.rs  get_cmd.rs  log_cmd.rs  login_cmd.rs  mod.rs  proxy_cmd.rs  reconcile_cmd.rs  report_cmd.rs  request.rs  select_cmd.rs  send_cmd.rs  serve_cmd.rs  set_cmd.rs  show_cmd.rs  sync_cmd.rs  work_cmd.rs
src/container/: base.rs  controller.rs  factory.rs  kube.rs  mod.rs  runpod.rs
src/dns/: mod.rs  server.rs  server_dyn.rs
src/entities/: containers.rs  mod.rs  namespaces.rs  processors.rs  secrets.rs  volumes.rs
src/handlers/: basic.rs  container.rs  mod.rs  secrets.rs
src/handlers/auth/: api.rs  mod.rs
src/handlers/v1/: auth.rs  cache.rs  container.rs  iam.rs  mod.rs  namespaces.rs  processors.rs  secrets.rs  volumes.rs
src/neblet/: daemon.rs
src/oci/: client.rs
src/processors/: base.rs  controller.rs  mod.rs  standard.rs
src/proxy/: authz.rs  containers.rs  meters.rs  mod.rs  server.rs
src/resources/v1/: mod.rs
src/resources/v1/containers/: base.rs  controller.rs  factory.rs  kube.rs  mod.rs  models.rs  runpod.rs
src/resources/v1/namespaces/: models.rs
src/resources/v1/processors/: base.rs  controller.rs  mod.rs  models.rs  standard.rs
src/resources/v1/secrets/: models.rs
src/resources/v1/services/: controller.rs  standard.rs
src/resources/v1/volumes/: mod.rs  models.rs
src/routes/: mod.rs
src/select/: checkpoint.rs
src/services/: controller.rs  mod.rs  standard.rs
src/ssh/: exec.rs  keys.rs  mod.rs
src/streams/: redis.rs
src/utils/: namespace.rs
src/volumes/: mod.rs  rclone.rs  s3_sync.rs
tutorials/: lora_train_serve.md
