[package]
name = "nebulous"
version = "0.1.86"
edition = "2021"
description = "A globally distributed container orchestrator"
license = "MIT"

[dependencies]
redis = { version = "0.27.5", features = ["aio", "tokio-comp"] }
futures = "0.3"
dotenv = "0.15.0"
once_cell = "1.20.2"
axum = { version = "0.7", features = ["macros", "ws"] }
hyper = "1.5.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "sqlite", "any", "postgres"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "full"] }
tower-http = { version = "0.6.1", features = ["trace", "cors"] }
tokio-util = { version = "0.7.12", features = ["compat" ] }
tower = "0.5.1"
uuid = { version = "1.1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "deflate", "rustls-tls", "stream"] }
tracing-subscriber = { version = "0.3", features = ["fmt"] }
kube = { version = "0.97.0", features = ["runtime", "derive", "client", "ws"] }
k8s-openapi = { version = "0.23.0", features = ["latest"] }
clap = { version = "4.5.20", features = ["derive"] }
rdkafka = { version = "0.37.0", features = ["tokio" ] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
url = "2.5"
futures-util = "0.3"
futures-channel = "0.3"
base64 = "0.22"
infer = "0.16.0"
prettytable = "0.10.0"
directories = "5.0.1"
serde_yaml = "0.9.25"
open = "5.3.0"
rpassword = "7.3.1"
dirs = "5.0.1"
http = "1.1.0"
sea-orm = { version = "1.1.0", features = ["sqlx-postgres", "sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = "1.1.0"
urlencoding = "2.1.3"
tracing = "0.1.40"
sea-orm-codegen = "1.1.0"
short-uuid = "0.1.3"
rand = "0.8.5"
image = "0.25.5"
notify = "8.0.0"
fs_extra = "1.3.0"
petname = "2.0.2"
walkdir = "2.5.0"
anyhow = "1.0.95"
schemars = { version = "0.8.21", features = ["derive"] }
runpod = "0.1.30"
axum-extra = { version = "0.10.0" }
thiserror = "2.0.12"
aws-config = "1.5.18"
aws-sdk-sts = "1.62.0"
aws-sdk-iam = "1.64.0"
tempfile = "3.19.0"
aes-gcm = "0.10.1"
dashmap = "6.1.0"
openmeter = "0.1.2"
shell-quote = "0.7.2"
ring = "0.17.14"
ssh2 = "0.9.5"
russh = { version = "0.51.1", features = ["async-trait"] }
async-trait = "0.1.88"
ssh-key = "0.6.7"
russh-keys = "0.49.2"
russh-cryptovec = "0.51.1"
ed25519-dalek = "2"
openai-api-rs = "6.0.3"
async-ssh2-tokio = "0.8.14"
tailscale-client = "0.1.5"
http-body = "1.0.1"
hickory-server = "0.25.1"
warp = "0.3.7"
bollard = "0.18.1"
oci-distribution = "0.11.0"
regex = "1.11.1"
jsonpath_lib = "0.3.0"
humantime = "2.2.0"
argon2 = "0.5.3"
aws-types = "1.3.6"
aws-sdk-s3 = "1.82.0"
colored = "3.0.0"
scopeguard = "1.2.0"

[lib]
name = "nebulous"
path = "src/lib.rs"
